Added options:  - Condition  - Pedal Noise  - Key Release Noise
(cherry picked from commit 0e40d52ee3f7a1535ddc7c09addce6ea3ee8c759)

--- a/index.html
+++ b/index.html
@@ -120,6 +120,37 @@
       </div>
 
 <!--      <hr />-->
+      <div class="pure-g row">
+        <div class="pure-u-1-1">
+          <form class="pure-form">
+            <label for="condition">Condition</label>
+            <input type="range" id="condition" name="condition" min="0" max="1" step="any" list="tickmarks_cond">
+            <datalist id="tickmarks_cond"></datalist>
+          </form>
+        </div>
+      </div>
+
+      <div class="pure-g row">
+        <div class="pure-u-1-1">
+          <form class="pure-form">
+            <label for="pedal-noise">Pedal Noise</label>
+            <input type="range" id="pedal-noise" name="pedal-noise" min="0" max="1" step="any" list="tickmarks_pedal_noise">
+            <datalist id="tickmarks_pedal_noise"></datalist>
+          </form>
+        </div>
+      </div>
+
+      <div class="pure-g row">
+        <div class="pure-u-1-1">
+          <form class="pure-form">
+            <label for="key-release-noise">Key Release Noise</label>
+            <input type="range" id="key-release-noise" name="key-release-noise" min="0" max="1" step="any" list="tickmarks_key_release_noise">
+            <datalist id="tickmarks_key_release_noise"></datalist>
+          </form>
+        </div>
+      </div>
+
+      <hr />
 
 <!--      <div class="pure-g row">-->
 <!--        <div class="pure-u-1-1">-->
