Fix wrong label attribute

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="pure-g row">
         <div class="pure-u-1-1">
           <form class="pure-form">
-            <label for="sound-output">Preset</label>
+            <label for="preset">Preset</label>
             <select name="preset" id="preset" class="full-width" disabled>
               <option value="...">Loading</option>
             </select>
