--- a/index.html
+++ b/index.html
@@ -119,61 +119,61 @@
         </div>
       </div>
 
-      <hr />
+<!--      <hr />-->
 
-      <div class="pure-g row">
-        <div class="pure-u-1-1">
-          <form class="pure-form" id="metronome-form">
-            <label for="metronome">Metronome tempo</label>
-            <select name="metronome" id="metronome" class="full-width" disabled></select>
-            <label for="metronome-signature">Metronome time signature</label>
-            <select name="metronome-signature" id="metronome-signature" class="full-width" disabled>
-              <option value="1/1">1/1</option>
-              <option value="1/2">1/2</option>
-              <option value="2/4">2/4</option>
-              <option value="3/4">3/4</option>
-              <option value="4/4">4/4</option>
-              <option value="5/4">5/4</option>
-              <option value="3/8">3/8</option>
-              <option value="6/8">6/8</option>
-              <option value="7/8">7/8</option>
-              <option value="9/8">9/8</option>
-              <!-- option value="12/8">12/8</option -->
-            </select>
-            <label for="metronome-volume">Metronome volume</label>
-            <select name="metronome-volume" id="metronome-volume" class="full-width" disabled>
-              <option value="-96">Silent</option>
-              <option value="-35">-35 dB</option>
-              <option value="-30">-30 dB</option>
-              <option value="-25">-25 dB</option>
-              <option value="-20">-20 dB</option>
-              <option value="-15">-15 dB</option>
-              <option value="-10">-10 dB</option>
-              <option value="-7">-7 dB</option>
-              <option value="-5">-5 dB</option>
-              <option value="-3">-3 dB</option>
-              <option value="-2">-2 dB</option>
-              <option value="-1">-1 dB</option>
-              <option value="0">+0 dB</option>
-              <option value="1">+1 dB</option>
-              <option value="2">+2 dB</option>
-              <option value="3">+3 dB</option>
-              <option value="5">+5 dB</option>
-              <option value="7">+7 dB</option>
-              <option value="10">+10 dB</option>
-              <option value="15">+15 dB</option>
-              <option value="20">+20 dB</option>
-            </select>
-            <label for="metronome-accent" id="metronome-accent-label">
-              <input type="checkbox" id="metronome-accent" disabled />
-              Accent on first beat
-            </label>
-            <button class="pure-button" id="metronome-toggle">Toggle Metronome</button>
-          </form>
-        </div>
-      </div>
+<!--      <div class="pure-g row">-->
+<!--        <div class="pure-u-1-1">-->
+<!--          <form class="pure-form" id="metronome-form">-->
+<!--            <label for="metronome">Metronome tempo</label>-->
+<!--            <select name="metronome" id="metronome" class="full-width" disabled></select>-->
+<!--            <label for="metronome-signature">Metronome time signature</label>-->
+<!--            <select name="metronome-signature" id="metronome-signature" class="full-width" disabled>-->
+<!--              <option value="1/1">1/1</option>-->
+<!--              <option value="1/2">1/2</option>-->
+<!--              <option value="2/4">2/4</option>-->
+<!--              <option value="3/4">3/4</option>-->
+<!--              <option value="4/4">4/4</option>-->
+<!--              <option value="5/4">5/4</option>-->
+<!--              <option value="3/8">3/8</option>-->
+<!--              <option value="6/8">6/8</option>-->
+<!--              <option value="7/8">7/8</option>-->
+<!--              <option value="9/8">9/8</option>-->
+<!--              &lt;!&ndash; option value="12/8">12/8</option &ndash;&gt;-->
+<!--            </select>-->
+<!--            <label for="metronome-volume">Metronome volume</label>-->
+<!--            <select name="metronome-volume" id="metronome-volume" class="full-width" disabled>-->
+<!--              <option value="-96">Silent</option>-->
+<!--              <option value="-35">-35 dB</option>-->
+<!--              <option value="-30">-30 dB</option>-->
+<!--              <option value="-25">-25 dB</option>-->
+<!--              <option value="-20">-20 dB</option>-->
+<!--              <option value="-15">-15 dB</option>-->
+<!--              <option value="-10">-10 dB</option>-->
+<!--              <option value="-7">-7 dB</option>-->
+<!--              <option value="-5">-5 dB</option>-->
+<!--              <option value="-3">-3 dB</option>-->
+<!--              <option value="-2">-2 dB</option>-->
+<!--              <option value="-1">-1 dB</option>-->
+<!--              <option value="0">+0 dB</option>-->
+<!--              <option value="1">+1 dB</option>-->
+<!--              <option value="2">+2 dB</option>-->
+<!--              <option value="3">+3 dB</option>-->
+<!--              <option value="5">+5 dB</option>-->
+<!--              <option value="7">+7 dB</option>-->
+<!--              <option value="10">+10 dB</option>-->
+<!--              <option value="15">+15 dB</option>-->
+<!--              <option value="20">+20 dB</option>-->
+<!--            </select>-->
+<!--            <label for="metronome-accent" id="metronome-accent-label">-->
+<!--              <input type="checkbox" id="metronome-accent" disabled />-->
+<!--              Accent on first beat-->
+<!--            </label>-->
+<!--            <button class="pure-button" id="metronome-toggle">Toggle Metronome</button>-->
+<!--          </form>-->
+<!--        </div>-->
+<!--      </div>-->
 
-      <hr />
+<!--      <hr />-->
 
       <div class="pure-g row">
         <div class="pure-u-1-1" style="text-align: center;">
