Remove output mode dropdown

--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
       </div>
       -->
 
-      <div class="pure-g row">
-        <div class="pure-u-1-1">
-          <form class="pure-form">
-            <label for="output-mode">Output mode</label>
-            <select name="output-mode" id="output-mode" class="full-width" disabled>
-              <option value="Sound Recording">Sound Recording</option>
-              <option value="Binaural">Binaural</option>
-              <option value="Stereophonic">Stereophonic</option>
-              <option value="Monophonic">Monophonic</option>
-            </select>
-          </form>
-        </div>
-      </div>
+<!--      <div class="pure-g row">-->
+<!--        <div class="pure-u-1-1">-->
+<!--          <form class="pure-form">-->
+<!--            <label for="output-mode">Output mode</label>-->
+<!--            <select name="output-mode" id="output-mode" class="full-width" disabled>-->
+<!--              <option value="Sound Recording">Sound Recording</option>-->
+<!--              <option value="Binaural">Binaural</option>-->
+<!--              <option value="Stereophonic">Stereophonic</option>-->
+<!--              <option value="Monophonic">Monophonic</option>-->
+<!--            </select>-->
+<!--          </form>-->
+<!--        </div>-->
+<!--      </div>-->
 
       <div class="pure-g row">
         <div class="pure-u-1-1">
