Move the debug stuff into the footer

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
       </div>
 
-      <hr />
+<!--      <hr />-->
 
 <!--      <div class="pure-g row">-->
 <!--        <div class="pure-u-1-1">-->
@@ -206,27 +206,29 @@
 
 <!--      <hr />-->
 
-      <div class="pure-g row">
-        <div class="pure-u-1-1" style="text-align: center;">
-          <table class="pure-table full-width pure-table-bordered">
-            <tbody id="data-table">
+      <footer>
+        <div class="pure-g row">
+          <div class="pure-u-1-1" style="text-align: center;">
+            <table class="pure-table full-width pure-table-bordered">
+              <tbody id="data-table">
               <tr style="text-align: center;">
                 <td>Loading...</td>
                 <td>Please wait...</td>
               </tr>
-            </tbody>
-          </table>
+              </tbody>
+            </table>
+          </div>
         </div>
-      </div>
 
-      <div class="pure-g row">
-        <div class="pure-u-1-1">
-          <pre id="debug"></pre>
+        <div class="pure-g row">
+          <div class="pure-u-1-1">
+            <pre id="debug"></pre>
+          </div>
         </div>
-      </div>
 
-      <footer>
-        Powered by <a href="https://github.com/shuhaowu/remote-for-pianoteq" target="_blank">Remote for Pianoteq</a>
+        <div class="pure-g row">
+          <span>Powered by <a href="https://github.com/shuhaowu/remote-for-pianoteq" target="_blank">Remote for Pianoteq</a></span>
+        </div>
       </footer>
 
     </div>
