Add instrument selection dropdow

--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
       <div class="pure-g row">
         <div class="pure-u-1-1">
           <form class="pure-form">
+            <label for="instrument">Instrument</label>
+            <select name="instrument" id="instrument" class="full-width" disabled>
+              <option value="...">Loading</option>
+            </select>
+          </form>
+        </div>
+      </div>
+
+      <div class="pure-g row">
+        <div class="pure-u-1-1">
+          <form class="pure-form">
             <label for="preset">Preset</label>
             <select name="preset" id="preset" class="full-width" disabled>
               <option value="...">Loading</option>
