Add reverb mix slider

--- a/index.html
+++ b/index.html
@@ -161,6 +161,16 @@
         </div>
       </div>
 
+      <div class="pure-g row">
+        <div class="pure-u-1-1">
+          <form class="pure-form">
+            <label for="reverb-mix">Reverb Mix</label>
+            <input type="range" id="reverb-mix" name="reverb-mix" min="0" max="1" step="any" list="tickmarks_reverb_mix">
+            <datalist id="tickmarks_reverb_mix"></datalist>
+          </form>
+        </div>
+      </div>
+
 <!--      <hr />-->
 
 <!--      <div class="pure-g row">-->
